Made Resume and qualification table with image

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,11 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="esp">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bhaskar's Web Page</title>
 </head>
 <body>
-    <h1>Welcome to Bhaskar's Web Page</h1>
+    <h1 align="center">RESUME</h1>
+    <img src="HTML/vivo 1951 192x192_000015.jpg" alt="Bhaskar's Photo" width="200" height="200" align="right">
+    <h3 >Name: Bhaskar Pandey</h3>
+    <h3 >Father's Name: Devi Datt Pandey</h3>
+    <h3 >Mother's Name: Radha Pandey</h3>
+    <h3 >DOB: 22/09/2004</h3>
+    <h3 >e-Mail id: iambatman6190@gmail.com</h3>
+    <h3>Git id: <a href="https://github.com/BhaSkaR2oP">https://github.com/BhaSkaR2oP</a></h3></a>
+    <h3 >Ph.No. : 7705896188</h3>
+    <h3 align="center">Bhaskar's Academic Qualification</h2>
+    <table border="5" width="90%" align="center" cellpadding="10" cellspacing="0" bgcolor="lightgreen">
+        <tr bgcolor="skyblue">
+            <th>S.No.</th>
+            <th>Class</th>
+            <th>Board/University</th>
+            <th>Marks</th>
+            <th>Division</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>10th</td>
+            <td>CBSE</td>
+            <td>94.3%</td>
+            <td>First</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>12th</td>
+            <td>CBSE</td>
+            <td>86.6%</td>
+            <td>First</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>1st Semester</td>
+            <td>AKTU</td>
+            <td>87.7%</td>
+            <td>First</td>
+        </tr>
+    </table>
+    <h3>Area of Interest:</h3>
+    <h3 >Hobby: </h3>
+    <h3>Disclaimer: </h3>
+
 </body>
 </html>
