Added photo and signature

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,13 +7,14 @@
 </head>
 <body>
     <h1 align="center">RESUME</h1>
-    <img src="HTML/vivo 1951 192x192_000015.jpg" alt="Bhaskar's Photo" width="200" height="200" align="right">
+    <img src="vivo 1951 192x192_000015.jpg" alt="Bhaskar's Photo" width="150" height="150" align="right">
     <h3 >Name: Bhaskar Pandey</h3>
     <h3 >Father's Name: Devi Datt Pandey</h3>
     <h3 >Mother's Name: Radha Pandey</h3>
     <h3 >DOB: 22/09/2004</h3>
     <h3 >e-Mail id: iambatman6190@gmail.com</h3>
-    <h3>Git id: <a href="https://github.com/BhaSkaR2oP">https://github.com/BhaSkaR2oP</a></h3></a>
+    <h3>Linkedin: <a href="https://www.linkedin.com/in/bhaskar-pandey-5a34aa345/">https://www.linkedin.com/in/bhaskar-pandey</a></h3></a>
+    <h3>GitHub: <a href="https://github.com/BhaSkaR2oP">https://github.com/BhaSkaR2oP</a></h3></a>
     <h3 >Ph.No. : 7705896188</h3>
     <h3 align="center">Bhaskar's Academic Qualification</h2>
     <table border="5" width="90%" align="center" cellpadding="10" cellspacing="0" bgcolor="lightgreen">
@@ -40,15 +41,15 @@
         </tr>
         <tr>
             <td>3</td>
-            <td>1st Semester</td>
+            <td>B.Tech(Ist Sem)</td>
             <td>AKTU</td>
             <td>87.7%</td>
             <td>First</td>
         </tr>
     </table>
-    <h3>Area of Interest:</h3>
-    <h3 >Hobby: </h3>
-    <h3>Disclaimer: </h3>
-
+    <h3>Area of Interest:  My main Focus lies in Developing new technologies by using Java Tools and Web Stacks.</h3>
+    <h3 >Hobby: Building and maintaining personal computers, including troubleshooting hardware and software issues. I also volunteer to provide tech support for a local non-profit, helping them with network setup and data backup. </h3>
+    <h3>Disclaimer: I hereby assure that all information provided are true to best of my knowledge. </h3>
+    <img src="signature.png" alt="Signature" width="200" height="100" align="right">
 </body>
 </html>
