--- a/HTML/Student_Reg_Form.html
+++ b/HTML/Student_Reg_Form.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1 align="center">Student Registration Form</h1>
+    <h3 align="left">Please fill in the details below:</h3>
+    <h3 align="left">All fields are mandatory</h3>
+    <h3 align="left">*Please make sure to enter valid information</h3>
     <table border="5" width="70%" align="center" cellpadding="10" cellspacing="0" bgcolor="lightyellow">
         <form action="Student_Reg_Form.html" method="post">
             <tr>
@@ -56,5 +59,6 @@
                 <td colspan="2" align="center"><input type="submit" value="Register"></td>
                 </tr>
             </form>
+            </table>
     </body>
 </html>
