--- a/WD_Lab/main_frame.html
+++ b/WD_Lab/main_frame.html
@@ -11,6 +11,7 @@
             justify-content: center;
             font-family: sans-serif;
             color: #555;
+            background-color: white;
         }
     </style>
 </head>
