--- a/WD_Lab/top_frame.html
+++ b/WD_Lab/top_frame.html
@@ -10,20 +10,20 @@
     </style>
 </head>
 <body>
-    <table border="2" width="100%" height="120" cellpadding="0" cellspacing="0">
+    <table border="2" width="100%" height="120" cellpadding="1" cellspacing="1">
         <tr style="background-color:orange;" height="60">
-            <td width="20.1%"><img src="images.ico" height="50"></td>
+            <td width="20.1%"><img src="images.ico" alt="Logo" height="50"></td>
             <td><h2>Web Site Name</h2></td>
         </tr>
         <tr style="background-color: #FFE8D6;" height="60">
             <td colspan="2">
-                <table border="2" width="100%" height="100%" cellspacing="0">
+                <table border="2" width="100%" height="100%" cellspacing="1">
                     <tr>
                         <td width="20%"><a href="index.html" target="_top">Home</a></td>
-                        <td width="20%" style="border-left: 1px solid black;"><a href="login.html" target="mainFrame">Login</a></td>
-                        <td width="20%" style="border-left: 1px solid black;"><a href="registration.html" target="mainFrame">Registration</a></td>
-                        <td width="20%" style="border-left: 1px solid black;"><a href="catalogue.html" target="mainFrame">Catalogue</a></td>
-                        <td width="20%" style="border-left: 1px solid black;"><a href="cart.html" target="mainFrame">Cart</a></td>
+                        <td width="20%" style="border-left: 1px solid black;"><a href="login.html" target="rightFrame">Login</a></td>
+                        <td width="20%" style="border-left: 1px solid black;"><a href="registration.html" target="rightFrame">Registration</a></td>
+                        <td width="20%" style="border-left: 1px solid black;"><a href="catalogue.html" target="rightFrame">Catalogue</a></td>
+                        <td width="20%" style="border-left: 1px solid black;"><a href="cart.html" target="rightFrame">Cart</a></td>
                     </tr>
                 </table>
             </td>
