--- a/WD_Lab/index.html
+++ b/WD_Lab/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>BOOKSTORE</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
       <iframe src="top_frame.html" name="topFrame" width="100%" height="150"></iframe>
