--- a/WD_Lab/left_frame.html
+++ b/WD_Lab/left_frame.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Navigation</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         body { 
             font-family: sans-serif; 
