--- a/WD_Lab/registration.html
+++ b/WD_Lab/registration.html
@@ -104,7 +104,7 @@
 <body>
     <div class="container">
         <h1>REGISTRATION PAGE</h1>
-        <form action="#" method="post">      
+        <form onsubmit="return validateTask7()">     
             <div class="form-group">
                 <label for="name">1) Name:</label>
                 <input type="text" id="name" name="name" placeholder="Enter your full name" required>
@@ -154,5 +154,34 @@
             <button type="submit" class="btn-submit">Register Now</button>
         </form>
     </div>
+
+<script>
+// TASK 7: Validate Email and Phone Number
+function validateTask7() {
+    let email = document.getElementById("email").value.trim();
+    let phone = document.getElementById("phone").value.trim();
+
+    // Email → must match standard pattern
+    let emailPattern = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
+    if (!emailPattern.test(email)) {
+        alert("Please enter a valid email address (e.g., name@domain.com).");
+        document.getElementById("email").focus();
+        return false;
+    }
+
+    // Phone → must be 10 digits only
+    let phonePattern = /^[0-9]{10}$/;
+    if (!phonePattern.test(phone)) {
+        alert("Phone number must contain exactly 10 digits.");
+        document.getElementById("phone").focus();
+        return false;
+    }
+
+    alert("Task 7 validation passed successfully!");
+    return true;
+}
+</script>
+
+
 </body>
 </html>
