--- a/WD_Lab/top_frame.html
+++ b/WD_Lab/top_frame.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Header</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         body { font-family: sans-serif; margin: 0; }
         table { border-collapse: collapse; }
